--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,10 @@ variables:
 
 jobs:
 - job: buildAndDeploy
-  displayName: Build & deploy website
+  ${{ if parameters.deploy }}:
+    displayName: Build & deploy website
+  ${{ else }}:
+    displayName: Build website
 
   pool:
     vmImage: '${{ parameters.image }}'
@@ -50,7 +53,7 @@ jobs:
       configuration: '$(buildConfiguration)'
 
   - task: VSTest@2
-    displayName: Test website
+    displayName: Test website locally
     inputs:
       platform: '$(buildPlatform)'
       configuration: '$(buildConfiguration)'
