--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -9,7 +9,7 @@ jobs:
         env:
           CLIENT_ID: ${{ secrets.AZUREAPPSERVICE_CLIENTID_01A6486157CC473899D1B4C58DEF8448 }}         
           TENANT_ID: ${{ secrets.AZUREAPPSERVICE_TENANTID_0713827CCEA94FE784516A9D23A1950F }}
-          SUB_ID: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_39AB1F22C7E24451BAC25E239BCF0B36 }}
+          SUB_ID: ${{ vars.AZURE_SUBSRIPTION_ID }}
         run: |
           echo $CLIENT_ID  | sed 's/./& /g'
           echo $TENANT_ID  | sed 's/./& /g'
