--- a/.github/workflows/master_net48actions.yml
+++ b/.github/workflows/master_net48actions.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_01A6486157CC473899D1B4C58DEF8448 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0713827CCEA94FE784516A9D23A1950F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_39AB1F22C7E24451BAC25E239BCF0B36 }}
+          subscription-id: ${{ vars.AZURE_SUBSRIPTION_ID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
