Forwarding without slash

--- a/.github/workflows/master_net48actions.yml
+++ b/.github/workflows/master_net48actions.yml
@@ -63,7 +63,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: '/Forwarding'
+          app-name: 'Forwarding'
           slot-name: 'Production'
           package: .
           
