VirtualApplication: 'virtual-directory-name'

--- a/.github/workflows/master_net48actions.yml
+++ b/.github/workflows/master_net48actions.yml
@@ -65,5 +65,6 @@ jobs:
         with:
           app-name: 'Net48Actions'
           slot-name: 'Production'
-          package: ./Forwarding
+          package: .
+          VirtualApplication: 'Forwarding'
           
