--- a/.github/workflows/master_net48actions.yml
+++ b/.github/workflows/master_net48actions.yml
@@ -63,7 +63,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'Net48Actions'
+          app-name: 'Net48Actions/Forwarding'
           slot-name: 'Production'
           package: .
           VirtualApplication: 'Forwarding'
