--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -35,7 +35,7 @@ jobs:
         uses: microsoft/setup-msbuild@v1.0.2
 
       - name: Run MSBuild
-        run: msbuild .\SampleWebApplication.sln
+        run: msbuild .\SimpleFrameworkApp.sln
 
       - name: "Run Azure webapp deploy action using publish profile credentials"
         uses: azure/webapps-deploy@v3
