Update package path in GitHub Actions workflow for Net48Actions

--- a/.github/workflows/master_net48actions.yml
+++ b/.github/workflows/master_net48actions.yml
@@ -65,5 +65,5 @@ jobs:
         with:
           app-name: "Net48Actions"
           slot-name: "Production"
-          package: "ForwardingApp"
+          package: "./ForwardingApp"
           #VirtualApplication: 'Forwarding'
