--- a/.github/workflows/master_net48actions.yml
+++ b/.github/workflows/master_net48actions.yml
@@ -66,5 +66,5 @@ jobs:
           app-name: "Net48Actions"
           slot-name: "Production"
           package: "."
-          target-path: "Forwarding"
+          target-path: "/home/site/ForwardingApp"
           #VirtualApplication: 'Forwarding'
